# hotel_booking_service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
hotel_booking_service/: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
hotel_booking_service/.github/workflows/: ci.yml
hotel_booking_service/src/: conftest.py  db.sqlite3  manage.py  urls.py
hotel_booking_service/src/bookings/: models.py  serializers.py  urls.py  views.py
hotel_booking_service/src/bookings/migrations/: 0001_initial.py
hotel_booking_service/src/config/: settings.py  urls.py
hotel_booking_service/src/hotels/: apps.py  models.py  serializers.py  urls.py  views.py
hotel_booking_service/src/hotels/migrations/: 0001_initial.py  0002_hotel_address_hotel_city_room_address_and_more.py  0003_alter_hotel_name.py
hotel_booking_service/src/hotels/services/: hotel_service.py
hotel_booking_service/src/hotels/tests/: __init__.py  test_services.py
hotel_booking_service/src/hotels/tests/integration/: test_full_booking_flow.py  test_hotel_api.py
hotel_booking_service/src/hotels/tests/unit/: test_serializers.py  test_services.py
src/: manage.py
src/core/: conftest.py
src/core/bookings/: apps.py  models.py  serializers.py  views.py
src/core/bookings/migrations/: 0002_remove_booking_hotel_booking_room.py
src/core/config/: asgi.py  settings.py  urls.py  wsgi.py
src/core/hotels/: apps.py  models.py  serializers.py  views.py
src/core/hotels/services/: hotel_service.py
src/core/hotels/tests/: __init__.py  base.py
src/core/hotels/tests/integration/: test_booking_api.py  test_full_booking_flow.py  test_hotel_api.py  test_room_api.py
src/core/hotels/tests/unit/: test_models.py  test_serializers.py  test_services.py
src/core/tests/utils/: factories.py
src/hotel_booking_service/: conftest.py
src/hotel_booking_service/bookings/: models.py
src/hotel_booking_service/config/: urls.py
src/hotel_booking_service/hotels/tests/: __init__.py  base.py
src/hotel_booking_service/hotels/tests/integration/: test_full_booking_flow.py  test_room_api.py
src/hotel_booking_service/hotels/tests/unit/: test_models.py  test_serializers.py  test_services.py
src/hotels/tests/integration/: test_booking_api.py
src/templates/drf_yasg/: redoc.html  swagger-ui.html
src/tests/utils/: factories.py
